--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "dependencies": {
     "through2": "^0.6.1",
-    "gulp-match": "^3.0.1"
+    "gulp-util": "^3.0.1"
   },
   "devDependencies": {},
   "engines": {
