--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-filter-by",
-  "description": "A gulp plugin to filter a files by using a function defined directly to work with the file itself",
-  "version": "1.0.2",
+  "description": "Filter files by checking the file itself",
+  "version": "1.0.3",
   "homepage": "https://github.com/dualcyclone/gulp-filter-by",
   "repository": "git://github.com/dualcyclone/gulp-filter-by.git",
   "author": {
