--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-filter-by",
   "description": "Filter files by checking the file itself",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "homepage": "https://github.com/dualcyclone/gulp-filter-by",
   "repository": "git://github.com/dualcyclone/gulp-filter-by.git",
   "author": {
@@ -32,6 +32,10 @@
   },
   "devDependencies": {
     "chai": "^1.9.1",
+    "gulp-istanbul": "^0.2.2",
+    "gulp-jshint": "^1.8.4",
+    "gulp-mocha": "^1.0.0",
+    "jshint-stylish": "^0.4.0",
     "mocha": "^1.21.4",
     "sinon": "^1.10.3"
   }
