--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gulp-filter-by",
   "description": "Filter files by checking the file itself",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "homepage": "https://github.com/dualcyclone/gulp-filter-by",
   "repository": "git://github.com/dualcyclone/gulp-filter-by.git",
   "author": {
@@ -9,15 +9,13 @@
     "email": "npm@flyinganvil.co.uk",
     "url": "http://www.flyinganvil.co.uk/"
   },
+  "main": "./index.js",
   "engines": {
     "node": ">= 0.10.28"
   },
   "scripts": {
     "test": "mocha"
   },
-  "files": [
-    "index.js"
-  ],
   "keywords": [
     "gulpplugin",
     "filter",
@@ -38,5 +36,8 @@
     "jshint-stylish": "^0.4.0",
     "mocha": "^1.21.4",
     "sinon": "^1.10.3"
+  },
+  "scripts": {
+    "test": "gulp test"
   }
 }
